[project]
name = "secure-journal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography",
    "openai>=1.60.1",
]

[project.scripts]
secure-journal = "secure_journal.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
]

[tool.ruff]
# Enable all rules by default
select = ["ALL"]

line-length = 80
ignore = [
  "T201", # print statements
  "BLE001", # Blind exceptions
  "D", # Documentation errors
  "S603", # subprocess call - check for execution of untrusted input
]

[tool.ruff.format]
quote-style = "double"
