[project]
name = "secure-journal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography",
    "openai>=1.60.1",
]

[project.scripts]
secure-journal = "secure_journal.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
]

[tool.ruff]
# Enable all rules by default

line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "T201", # print statements
  "BLE001", # Blind exceptions
  "S603", # subprocess call - check for execution of untrusted input
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
  "COM812",
]

[tool.ruff.format]
quote-style = "double"
